umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_ions_sif3-.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: inorganic_ions
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cw
    atoms:
      - "{Si-/1v3}"
      - "{F/3v1}"
      - "{F/3v1}"
      - "{F/3v1}"
    bonds:
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cw
    atoms:
      - "{Si-/1v3}"
      - "{F/3v1}"
      - "{F/3v1}"
      - "{F/3v1}"
    bonds:
      - "-"
      - "-"
      - "-"
