umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_bf3.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: inorganic_small
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cw
    atoms:
      - "B#v3"
      - "F#n3#v"
      - "F#n3#v"
      - "F#n3#v"
    bonds:
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cw
    atoms:
      - "B#v3"
      - "F#n3#v"
      - "F#n3#v"
      - "F#n3#v"
    bonds:
      - "-"
      - "-"
      - "-"
