umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_bh.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: inorganic_small
atom_typing:
  success: true
  summary:
    atom_count: 2
    bond_count: 1
    topology: A_
    atoms:
      - "B#n#v"
      - "H#v"
    bonds:
      - "-"
counts:
  success: true
  summary:
    atom_count: 2
    bond_count: 1
    topology: A_
    atoms:
      - "B#n#v"
      - "H#v"
    bonds:
      - "-"
